istio/peer-auth.yaml
# istio/peer-auth.yaml
apiVersion: security.istio.io/v1beta1
kind: PeerAuthentication
metadata:
  name: default
  namespace: dev
spec:
  mtls:
    mode: STRICT   # bắt buộc mTLS giữa tất cả services
