istio/virtual-service-tax.yaml
# istio/virtual-service-tax.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: tax
  namespace: dev
spec:
  hosts: [tax]
  http:
    - retries:
        attempts: 3
        perTryTimeout: 5s
        retryOn: "5xx,connect-failure"
      route:
        - destination:
            host: tax
